@@ -52,6 +52,10 @@ const guchar *gv_at_page_buf =
 "@page { size :8.5in 11in; margin: 2cm }"
 ;
 
+const guchar *gv_at_charset_buf =
+"@charset \"ISO-8859-1\" ; "
+;
+
 static void 
 display_help (char *prg_name) ;
 
@@ -211,6 +215,23 @@ test_cr_statement_at_page_rule_parse (void)
         return CR_OK ;
 }
 
+static enum CRStatus
+test_cr_statement_at_charset_rule_parse (void)
+{
+        CRStatement *stmt = NULL ;
+        
+        stmt = cr_statement_at_charset_rule_parse_from_buf (gv_at_charset_buf,
+                                                            CR_UTF_8) ;  
+        g_return_val_if_fail (stmt, CR_ERROR) ;
+        if (stmt)
+        {
+                cr_statement_destroy (stmt) ;
+                stmt = NULL ;
+        }
+
+        return CR_OK ;
+}
+
 /**
  *The entry point of the testing routine.
  */
@@ -242,6 +263,13 @@ main (int argc, char ** argv)
         }
 
         test_cr_statement_at_page_rule_parse () ;
+        if (status != CR_OK)
+        {
+                g_print ("\nKO\n") ;
+                return 0 ;
+        }
+
+        test_cr_statement_at_charset_rule_parse () ;
         if (status != CR_OK)
         {
                 g_print ("\nKO\n") ;
